# cmor438-s2026-final-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/rice_Ml/measures_ml/: distances.py
src/rice_Ml/preprocessing/: __init__.py  audio.py  dataset.py  features.py  guitarset.py
src/rice_Ml/supervised_ml/Perceptron/: README.md  perceptron.py
src/rice_Ml/supervised_ml/knn/: __init__.py  _base.py  classifier.py  recommender.py  regressor.py
tests/: test_distances.py  test_smoke.py
tests/knn/: test_classifier.py  test_recommender.py  test_regressor.py
tests/preprocessing/: test_audio.py  test_dataset.py  test_features.py  test_guitarset.py
