[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rice_Ml"
version = "0.1.0"
description = "Rice ML — supervised, unsupervised, preprocessing, and evaluation utilities"
authors = [{ name = "Seyaul Kim, Hongtao Hu, Nolan", email = "esk8@rice.edu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "ipython",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rice_Ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.black]
line-length = 100
